--- a/basic/index.html
+++ b/basic/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/name.css">
+  <link rel="stylesheet" href="../css/name.css">
   <title>Document</title>
   <script defer src="./js/main.js"></script>
 
