--- a/profile/profile.html
+++ b/profile/profile.html
@@ -12,11 +12,14 @@
     class="profileImage"    alt="프로필이미지">
     <h3 class="title">존박</h3>
     <h4 class="title">웹 프론트엔드 개발자</h4>
-    <!-- 본문을 담을 때 p태그 -->
-    <p>
-      안녕하세요 존박 입니다. 
-      현재 웨프론트엔드 개발자로 활동중이며
-      김치를 넘나 잘 담그는 것
-    </p>
+    <div class="box">
+      <!-- 본문을 담을 때 p태그 -->
+      <p>
+        안녕하세요 존박 입니다. 
+        현재 웨프론트엔드 개발자로 활동중이며
+        김치를 넘나 잘 담그는 것
+      </p>
+
+    </div>
 </body>
 </html>
