--- a/camera/camera.html
+++ b/camera/camera.html
@@ -10,10 +10,10 @@
   <div class="container">
     <div class="camera"></div>
     <div class="main">
-      <h4 class="main-1"></h4>
-      <p class="main-2"></p>
-      <p class="main-3"></p>
-      <p class="main-4"></p>
+      <h4 class="main-1">캐논 DSLR 100D(단렌즈,충전기 16기가SD 포함)</h4>
+      <p class="main-2">성동구 행당동 . 끌올10분전</p>
+      <p class="main-3">210,000원</p>
+      <p class="main-4">♡4</p>
     </div>
   </div>
 </body>
