--- a/shoes/shoes.html
+++ b/shoes/shoes.html
@@ -37,6 +37,57 @@
        culpa natus laboriosam!</p>
   </div>
   
+  <!-- 폼 작업 -->
+   <!-- action : 전송할 주소 -->
+   <!-- method : 전송방법(get , post) -->
+   <!-- form method=get(주소 표시줄에 보이는것*중요하지 않는것),post(주소 표시줄에 안보이는것*중요한것)를 씀 -->
+  <!-- <form action="#" method="get">
+    <input type="text">
+    <input type="password">
+    <input type="date">
+    <input type="email">
+    <input type="number">
+    <input type="checkbox">
+    <input type="radio">
+    <input type="button" value="눌러주세요">
+    <textarea name="" id=""></textarea>
+    <input type="submit" value="전송">
+  </form> -->
+  
+  <div class="form-background">
+    <div class="form-white">
+      <form action="" method="" >
+        <div class="w-100">
+          <h3>contact Us</h3>
+          <p>you Email</p>
+          <input type="email" class="form-input"
+          placeholder="Enter your email" name="email">
+        </div>
+        <div class="w-50">
+          <p>First Name</p>
+          <input type="trxt" class="form-input" name="First-name">
+        </div>
+        <div class="w-50">
+          <p>Last Name</p>
+          <input type="trxt" class="form-input" name="Last-name">
+        </div>
+        <div style="clear: both;"></div>
+        <div class="w-100">
+          <p>Message</p>
+          <textarea name="Message" id="" class="form-input"></textarea>
+        </div>
+        <div class="w-100">
+          <!-- name은 서버에서 씀 id는 js에서 씀 class는 css에서 씀 -->
+          <input type="checkbox" name="sub" id="sub" class="">
+          <label for="sub">Subscribe</label>
+          <!-- <button class="btn yellow-button">SEND</button> -->
+           <input type="submit">
+        </div>
+
+      </form>
+    </div>
+  </div>
+  
   
 </body>
 </html>
