--- a/shoes/shoes.html
+++ b/shoes/shoes.html
@@ -59,6 +59,27 @@
     <textarea name="" id=""></textarea>
     <input type="submit" value="전송">
   </form> -->
+
+  <!-- 미디어 퀴리를 활용할 가로정렬 연습 -->
+   <div class="product-container">
+    <div>
+      <h4>Fest Shipping</h4>
+      <p>Lorem ipsum</p>
+    </div>
+    <div>
+      <h4>Fest Shipping</h4>
+      <p>Lorem ipsum</p>
+    </div>
+    <div>
+      <h4>Fest Shipping</h4>
+      <p>Lorem ipsum</p>
+    </div>
+    <div>
+      <h4>Fest Shipping</h4>
+      <p>Lorem ipsum</p>
+    </div>
+   </div>
+   <div style="float: none; clear: both;"></div>
   
   <div class="form-background">
     <div class="form-white">
