--- a/shoes/shoes.html
+++ b/shoes/shoes.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- fontawesome cdn 들어가서 주소 복사-->
+  <!-- integrity 코드를 비교해서 틀리면 못씀(임의로 가공 못함) -->
+  <!-- crossorigin > cors (웹사이트의 접근 정첵이 있다)정보제공 서비스에는 키값을 가져가야 서비스를 해준다 -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
+  integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" 
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./css/shoes.css">
   <title>Document</title>
 </head>
@@ -80,6 +86,31 @@
     </div>
    </div>
    <div style="float: none; clear: both;"></div>
+
+  <!-- FontAwesome 을 활용한 이미지 처리 -->
+   <div class="product-container">
+    <div>
+      <i class="fa-solid fa-cart-shopping fa-3x" ></i>
+      <h4>Fast Shopping</h4>
+      <p>We ship faster than other shops.</p>
+    </div>
+    <div>
+      <i class="fa-solid fa-earth-asia fa-3x"></i>
+      <h4>Good Service</h4>
+      <p>Expect a lifelong Service</p>
+    </div>
+    <div>
+      <i class="fa-solid fa-user fa-3x"></i>
+      <h4>Free Coupons</h4>
+      <p>With new welcome gifts</p>
+    </div>
+    <div>
+      <i class="fa-solid fa-shirt fa-3x" ></i>
+      <h4>New product</h4>
+      <p>See monthly new products</p>
+    </div>
+    <div style="float: none; clear: both;"></div>
+   </div>
   
   <div class="form-background">
     <div class="form-white">
