--- a/shoes/shoes.html
+++ b/shoes/shoes.html
@@ -1,59 +1,65 @@
 <!DOCTYPE html>
 <html lang="kr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- fontawesome cdn 들어가서 주소 복사-->
-  <!-- integrity 코드를 비교해서 틀리면 못씀(임의로 가공 못함) -->
-  <!-- crossorigin > cors (웹사이트의 접근 정첵이 있다)정보제공 서비스에는 키값을 가져가야 서비스를 해준다 -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
-  integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" 
-  crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="./css/shoes.css">
-  <title>Document</title>
-</head>
-<body>
-  <div class="nav-container">
-    <div class="nav-item">shoesShop</div>
-    <div class="nav-item">products</div>
-    <div style="flex-grow: 1;"></div>
-    <div class="nav-item">services</div>
-  </div>
-  <div class="main-background">
-    <h4 class="main-title">Buy Out Shoes!</h4>
-    <p class="main-content">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-      Hic, excepturi. Mollitia eius suscipit, repellat distinctio facere non
-       ad voluptates quisquam. Nihil vero doloremque quis non laborum excepturi 
-       culpa natus laboriosam!
-    </p>
-    <p class="main-content">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-      Hic, excepturi. Mollitia eius suscipit, repellat distinctio facere non
-       ad voluptates quisquam. Nihil vero doloremque quis non laborum excepturi 
-       culpa natus laboriosam!
-    </p>
-    <p class="main-content">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-      Hic, excepturi. Mollitia eius suscipit, repellat distinctio facere non
-       ad voluptates quisquam. Nihil vero doloremque quis non laborum excepturi 
-       culpa natus laboriosam!
-    </p>
-    <button class ="main-button">구매하기</button>
-  </div>
-  <div class="explain-box">
-    <h4>How we design out shioes.</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-      Hic, excepturi. Mollitia eius suscipit, repellat distinctio facere non
-       ad voluptates quisquam. Nihil vero doloremque quis non laborum excepturi 
-       culpa natus laboriosam!</p>
-  </div>
-  
-  <!-- 폼 작업 -->
-   <!-- action : 전송할 주소 -->
-   <!-- method : 전송방법(get , post) -->
-   <!-- form method=get(주소 표시줄에 보이는것*중요하지 않는것),post(주소 표시줄에 안보이는것*중요한것)를 씀 -->
-  <!-- <form action="#" method="get">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- fontawesome cdn 들어가서 주소 복사-->
+    <!-- integrity 코드를 비교해서 틀리면 못씀(임의로 가공 못함) -->
+    <!-- crossorigin > cors (웹사이트의 접근 정첵이 있다)정보제공 서비스에는 키값을 가져가야 서비스를 해준다 -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/shoes.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="nav-container">
+      <div class="nav-item">shoesShop</div>
+      <div class="nav-item">products</div>
+      <div style="flex-grow: 1"></div>
+      <div class="nav-item">services</div>
+    </div>
+    <div class="main-background">
+      <h4 class="main-title">Buy Out Shoes!</h4>
+      <p class="main-content">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic,
+        excepturi. Mollitia eius suscipit, repellat distinctio facere non ad
+        voluptates quisquam. Nihil vero doloremque quis non laborum excepturi
+        culpa natus laboriosam!
+      </p>
+      <p class="main-content">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic,
+        excepturi. Mollitia eius suscipit, repellat distinctio facere non ad
+        voluptates quisquam. Nihil vero doloremque quis non laborum excepturi
+        culpa natus laboriosam!
+      </p>
+      <p class="main-content">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic,
+        excepturi. Mollitia eius suscipit, repellat distinctio facere non ad
+        voluptates quisquam. Nihil vero doloremque quis non laborum excepturi
+        culpa natus laboriosam!
+      </p>
+      <button class="main-button">구매하기</button>
+    </div>
+    <div class="explain-box">
+      <h4>How we design out shioes.</h4>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic,
+        excepturi. Mollitia eius suscipit, repellat distinctio facere non ad
+        voluptates quisquam. Nihil vero doloremque quis non laborum excepturi
+        culpa natus laboriosam!
+      </p>
+    </div>
+
+    <!-- 폼 작업 -->
+    <!-- action : 전송할 주소 -->
+    <!-- method : 전송방법(get , post) -->
+    <!-- form method=get(주소 표시줄에 보이는것*중요하지 않는것),post(주소 표시줄에 안보이는것*중요한것)를 씀 -->
+    <!-- <form action="#" method="get">
     <input type="text">
     <input type="password">
     <input type="date">
@@ -66,86 +72,117 @@
     <input type="submit" value="전송">
   </form> -->
 
-  <!-- 미디어 퀴리를 활용할 가로정렬 연습 -->
-   <div class="product-container">
-    <div>
-      <h4>Fest Shipping</h4>
-      <p>Lorem ipsum</p>
+    <!-- 미디어 퀴리를 활용할 가로정렬 연습 -->
+    <div class="product-container">
+      <div>
+        <h4>Fest Shipping</h4>
+        <p>Lorem ipsum</p>
+      </div>
+      <div>
+        <h4>Fest Shipping</h4>
+        <p>Lorem ipsum</p>
+      </div>
+      <div>
+        <h4>Fest Shipping</h4>
+        <p>Lorem ipsum</p>
+      </div>
+      <div>
+        <h4>Fest Shipping</h4>
+        <p>Lorem ipsum</p>
+      </div>
+      <div style="float: none; clear: both"></div>
     </div>
-    <div>
-      <h4>Fest Shipping</h4>
-      <p>Lorem ipsum</p>
-    </div>
-    <div>
-      <h4>Fest Shipping</h4>
-      <p>Lorem ipsum</p>
-    </div>
-    <div>
-      <h4>Fest Shipping</h4>
-      <p>Lorem ipsum</p>
-    </div>
-   </div>
-   <div style="float: none; clear: both;"></div>
 
-  <!-- FontAwesome 을 활용한 이미지 처리 -->
-   <div class="product-container">
-    <div>
-      <i class="fa-solid fa-cart-shopping fa-3x" ></i>
-      <h4>Fast Shopping</h4>
-      <p>We ship faster than other shops.</p>
+    <!-- FontAwesome 을 활용한 이미지 처리 -->
+    <div class="product-container">
+      <div>
+        <i class="fa-solid fa-cart-shopping fa-3x"></i>
+        <h4>Fast Shopping</h4>
+        <p>We ship faster than other shops.</p>
+      </div>
+      <div>
+        <i class="fa-solid fa-earth-asia fa-3x"></i>
+        <h4>Good Service</h4>
+        <p>Expect a lifelong Service</p>
+      </div>
+      <div>
+        <i class="fa-solid fa-user fa-3x"></i>
+        <h4>Free Coupons</h4>
+        <p>With new welcome gifts</p>
+      </div>
+      <div>
+        <i class="fa-solid fa-shirt fa-3x"></i>
+        <h4>New product</h4>
+        <p>See monthly new products</p>
+      </div>
+      <div style="float: none; clear: both"></div>
     </div>
-    <div>
-      <i class="fa-solid fa-earth-asia fa-3x"></i>
-      <h4>Good Service</h4>
-      <p>Expect a lifelong Service</p>
-    </div>
-    <div>
-      <i class="fa-solid fa-user fa-3x"></i>
-      <h4>Free Coupons</h4>
-      <p>With new welcome gifts</p>
-    </div>
-    <div>
-      <i class="fa-solid fa-shirt fa-3x" ></i>
-      <h4>New product</h4>
-      <p>See monthly new products</p>
-    </div>
-    <div style="float: none; clear: both;"></div>
-   </div>
-  
-  <div class="form-background">
-    <div class="form-white">
-      <form action="" method="" >
-        <div class="w-100">
-          <h3>contact Us</h3>
-          <p>you Email</p>
-          <input type="email" class="form-input"
-          placeholder="Enter your email" name="email">
-        </div>
-        <div class="w-50">
-          <p>First Name</p>
-          <input type="trxt" class="form-input" name="First-name">
-        </div>
-        <div class="w-50">
-          <p>Last Name</p>
-          <input type="trxt" class="form-input" name="Last-name">
-        </div>
-        <div style="clear: both;"></div>
-        <div class="w-100">
-          <p>Message</p>
-          <textarea name="Message" id="" class="form-input"></textarea>
-        </div>
-        <div class="w-100">
-          <!-- name은 서버에서 씀 id는 js에서 씀 class는 css에서 씀 -->
-          <input type="checkbox" name="sub" id="sub" class="">
-          <label for="sub">Subscribe</label>
-          <!-- <button class="btn yellow-button">SEND</button> -->
-           <input type="submit">
-        </div>
 
-      </form>
+    <!-- 상품 이미지 -->
+    <div class="shop-bg">
+      <div class="shop-container">
+        <div class="shop-item">
+          <div style="position: relative;">
+            <div class="overlay"></div>
+            <div>
+              <img src="./img/product1.jpg" alt="신발" class="sd" />
+            </div>
+          </div>
+        </div>
+        <div class="shop-item">
+          <div style="position: relative;">
+          <div class="overlay"></div>
+          <div>
+            <img src="./img/product2.jpg" alt="신발" class="sd" />
+          </div>
+        </div>
+        </div>
+        <div class="shop-item">
+          <div style="position: relative;">
+          <div class="overlay"></div>
+          <div>
+            <img src="./img/product3.jpg" alt="신발" class="sd" />
+          </div>
+        </div>
+        </div>
+      </div>
     </div>
-  </div>
-  
-  
-</body>
+
+    <div class="form-background">
+      <div class="form-white">
+        <form action="" method="">
+          <div class="w-100">
+            <h3>contact Us</h3>
+            <p>you Email</p>
+            <input
+              type="email"
+              class="form-input"
+              placeholder="Enter your email"
+              name="email"
+            />
+          </div>
+          <div class="w-50">
+            <p>First Name</p>
+            <input type="trxt" class="form-input" name="First-name" />
+          </div>
+          <div class="w-50">
+            <p>Last Name</p>
+            <input type="trxt" class="form-input" name="Last-name" />
+          </div>
+          <div style="clear: both"></div>
+          <div class="w-100">
+            <p>Message</p>
+            <textarea name="Message" id="" class="form-input"></textarea>
+          </div>
+          <div class="w-100">
+            <!-- name은 서버에서 씀 id는 js에서 씀 class는 css에서 씀 -->
+            <input type="checkbox" name="sub" id="sub" class="" />
+            <label for="sub">Subscribe</label>
+            <!-- <button class="btn yellow-button">SEND</button> -->
+            <input type="submit" />
+          </div>
+        </form>
+      </div>
+    </div>
+  </body>
 </html>
